[tool.poetry]
name = "servicenow-sdk-python"
version = "0.0.0"
description = ""
authors = ["Michael Canady <michaeldcanady+github@gmail.com>"]
readme = "README.md"
packages = [{include = "servicenow"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
httpx = "^0.27.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
