[tool.poetry]
name = "servicenow-sdk-python"
version = "0.0.0"
description = ""
authors = ["Michael Canady <michaeldcanady@gmail.com>"]
readme = "README.md"
packages = [{include = "servicenow"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
annotated-types = "^0.6.0"
anyio = "^4.2.0"
colorama = "^0.4.6"
h11 = "^0.14.0"
httpcore = "^1.0.2"
httpx = "^0.26.0"
iniconfig = "^2.0.0"
pluggy = "^1.3.0"
pydantic = "^2.5.3"
pydantic-core = "^2.14.6"
sniffio = "^1.3.0"
typing-extensions = "^4.9.0"
uritemplate = "^4.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
